Grease Pencil can't convert to any type while it is a separate from old strokes #73960

Closed
opened 2020-02-18 05:42:25 +01:00 by xueke pei · 9 comments
Member

System Information
Operating system: Windows 10
Graphics card:

Blender Version
Broken: (example: 2.82, release version 2.83 master version
Worked: (optional)

Short description of error
Grease Pencil can't convert to any type while it is a separate from old strokes

Exact steps for others to reproduce the error
1,Add GP strokes object in draw mode draw some line
2,in gp editmode select one line
3, press P separate line to a individual gp object
4, in 3D view, head menu object->Convert to-> three children menu display gray because mute by system

image.png

**System Information** Operating system: Windows 10 Graphics card: **Blender Version** Broken: (example: 2.82, release version 2.83 master version Worked: (optional) **Short description of error** Grease Pencil can't convert to any type while it is a separate from old strokes **Exact steps for others to reproduce the error** 1,Add GP strokes object in draw mode draw some line 2,in gp editmode select one line 3, press P separate line to a individual gp object 4, in 3D view, head menu object->Convert to-> three children menu display gray because mute by system ![image.png](https://archive.blender.org/developer/F8346672/image.png)
Author
Member

Added subscriber: @xuekepei

Added subscriber: @xuekepei
Antonio Vazquez was assigned by xueke pei 2020-02-18 06:25:34 +01:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Needs Triage'

Changed status from 'Confirmed' to: 'Needs Triage'
Antonio Vazquez removed their assignment 2020-02-18 09:09:53 +01:00

Added subscriber: @antoniov

Added subscriber: @antoniov

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

I can confirm this.
01.png

I can confirm this. ![01.png](https://archive.blender.org/developer/F8347047/01.png)
Antonio Vazquez self-assigned this 2020-02-18 10:57:51 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by abfdd1c697

This issue was referenced by abfdd1c697b5cd276bdd0c5dfda8fd2b48ff24f0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73960
No description provided.