Fix T73960: GPencil can't convert while it is a separate from old strokes

The problem was the new object hadn't any layer active.